--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "node-wol": "^0.1.1"
+    "node-wol": "^0.1.1",
+    "socket.io": "^1.7.2"
   }
 }
