--- a/TargetDaemon/config.json
+++ b/TargetDaemon/config.json
@@ -1,9 +1,9 @@
 {
   "server_ws_endpoint": "http://192.168.1.15:9000",
   "commands": {
-    "IDE": "/usr/bin/gedit",
-    "WEB": "/usr/bin/google-chrome",
-    "TERMINAL": "/usr/bin/x-terminal-emulator",
+    "IDE": "DISPLAY=:0 /usr/bin/gedit",
+    "WEB": "DISPLAY=:0 /usr/bin/google-chrome",
+    "TERMINAL": "DISPLAY=:0 /usr/bin/x-terminal-emulator",
     "HALT": "/sbin/shutdown",
     "REBOOT": "/sbin/shutdown -r"
   },
