[AndroidApp] working connection with Socket.io on wear

--- a/AndroidApp/HackAThon/wear/src/main/AndroidManifest.xml
+++ b/AndroidApp/HackAThon/wear/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.docdoku.hackaton.hackathon" >
 
     <uses-feature android:name="android.hardware.type.watch" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
