--- a/TargetDaemon/config.json
+++ b/TargetDaemon/config.json
@@ -6,7 +6,7 @@
     "WEB": "DISPLAY=:0 /usr/bin/google-chrome",
     "TERMINAL": "DISPLAY=:0 /usr/bin/x-terminal-emulator",
     "HALT": "/sbin/shutdown",
-    "REBOOT": "/sbin/shutdown -r",
+    "REBOOT": "/sbin/shutdown -r now",
     "PULL_REPO": "cd /home/docdoku/Documents/HackAThon/fat-sister-4u/ && usr/bin/git pull"
   },
   "shortcuts": {
